# pixi-git-lfs-example-package

./: README.md  pixi.toml  pyproject.toml
.github/workflows/: check-environments.yml
src/pixi_git_lfs_example/: __init__.py  cli.py
src/pixi_git_lfs_example.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pixi_git_lfs_example/data/: __init__.py  binary_cube.stl
