[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.4"]
build-backend = "setuptools.build_meta"

[project]
name = "pixi-git-lfs-example"
version = "0.1.0"
description = "Example package that stores files with Git LFS for Pixi issue reproduction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pixi Contributors", email = "info@prefix.dev"}
]
dependencies = []

[project.scripts]
check-stl-is-not-git-lfs-pointer = "pixi_git_lfs_example.cli:main"

[project.urls]
Repository = "https://github.com/prefix-dev/pixi"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pixi_git_lfs_example.data" = ["binary_cube.stl"]
